# Portfolio

./: Cargo.toml  Makefile  README.md  go.mod  main.go  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  versel.json
Frontend/: README.md  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  main.go  not-found.tsx  page.tsx
app/about/: page.tsx
app/blog/: page.tsx
app/contact/: page.tsx
app/projects/: page.tsx
app/sounds/: page.tsx
components/: blog-post-card.tsx  footer.tsx  header.tsx  mode-toggle.tsx  particle-background.tsx  prism-code.tsx  project-preview.tsx  rotating-background.tsx  typewriter-text.tsx
config/: portfolio.json  projects.json
go-app/: go.mod
internals/config/: config.go
lib/: posts.ts
new/.next/: trace
posts/Computer science/: sorting.md
posts/Mathematics/: Quadratic Equations.md
posts/Rust/: Cargo.md  Control flow.md  DataType.md  Development env setup.md  Reference and Borrowing.md  Slices.md  Struct.md  Variables and mutability.md
posts/Writing/: Academic writing.md  TypesOfParagraphs.md
resources/templates/: home.html
src/: article.rs  blog.rs  main.rs  template.rs
src/components/: navbar.module.css  navbar.tsx
static/: blog.html  info.html  quotes.md  root.html  sounds.html
static/articles/: math-and-code.md  neovim-configuration.md  performance-without-frameworks.md
static/blogs/: hello-world.md  math-and-code.md
static/css/: global.css  katex.min.css  rules.css  style.css
templates/: about.html  contact.html  home.html  layout.html  projects.html
(+36 files in other folders)
