[package]
name = "portfolio-server"
version = "0.1.0"
edition = "2024"

[dependencies]
katex = "0.4"
axum = "0.8"
pulldown-cmark = "0.12"
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = "0.5.3"
tower-http = { version = "0.6", features = ["fs", "set-header", "compression-full"] }
